# synology-photo-frame

./: .env.example  .gitignore  Cargo.toml  README.md  build.rs  wokwi.toml
.cargo/: config.toml
.github/workflows/: rust_ci.yml
src/: battery.rs  images.rs  lib.rs  synology.rs
